methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: not found: value getColor
   avance; if (getColor ==Color.green) { recule ;return true;}
               ^SlugTracking:4: error: not found: value False
  else {recule ; return False}
                        ^